Fix overflow para la landing: todas las versiones.
Estilo bordes redondos para el enter contest.

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -8009,9 +8009,6 @@ fieldset[disabled] #mobileContent .content .button-play-mobile.active {
   max-width: 100%;
   height: auto;
 }
-.landing-wrapper .screen .slider-wrapper {
-  position: relative;
-}
 .landing-wrapper .screen .content-wrapper {
   background-color: white;
   width: 100%;
@@ -8106,6 +8103,10 @@ fieldset[disabled] #mobileContent .content .button-play-mobile.active {
 }
 .landing-wrapper .screen .content-wrapper .content-container .screen-text-block > p {
   padding-bottom: 15px;
+}
+.landing-wrapper .slider-wrapper {
+  position: relative;
+  overflow: hidden;
 }
 .landing-wrapper .button-play {
   display: inline-block;
@@ -8701,6 +8702,8 @@ fieldset[disabled] .landing-wrapper .button-play.active {
   margin-left: -15px;
   margin-right: -15px;
   background-color: #ffffff;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 @media (max-width: 991px) {
   #enterContest {
