--- a/web/less/enter_contest_ctrl.less
+++ b/web/less/enter_contest_ctrl.less
@@ -9,6 +9,8 @@
 		.clean-paddings();
 	}
 	background-color: @white;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
 }
 
 // Tabs menu
