--- a/web/less/landing_page_comp.less
+++ b/web/less/landing_page_comp.less
@@ -120,9 +120,6 @@
 		 	position: relative;
 			.img-responsive();
 		}
-		.slider-wrapper {
-			position: relative;
-		}
 		.content-wrapper{
 			background-color: white;
 			width: 100%;
@@ -158,6 +155,10 @@
 				}
 			}
 		}
+	}
+	.slider-wrapper {
+		position: relative;
+		overflow: hidden;
 	}
 	.button-play{
 		.btn();
